2014-04-29  Senthil Kumar Selvaraj <senthil_kumar.selvaraj@atmel.com>

	Fix for bug #39049: Clock prescaler set and get are missing for TINY arch
	* include/avr/power.h: Add clock_prescale_set and get function/macro for 
	tiny 4, 5, 9, 10, 20 and 40 devices.

2014-04-29  Senthil Kumar Selvaraj <senthil_kumar.selvaraj@atmel.com>

	Fix for bug #40206: incorrect SP init in startup code for xmegas
	* crt1/gcrt1.S: write to SPL and then SPH for xmega SP initialization

2014-04-28  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	Fix for bug #42024: build break regarding avrtiny10
	Submitted by baxelrod@irobot.com
	* libc/misc/itoa.S: Fix typo in avr tiny macro.
	* libc/misc/itoa_ncheck.S: Same.
	* libc/misc/ltoa.S: Same.
	* libc/misc/ltoa_ncheck.S: Same.
	* libc/misc/utoa.S: Same.
	* libc/misc/utoa_ncheck.S: Same.
	* libc/misc/ultoa.S: Same.
	* libc/misc/ultoa_ncheck.S: Same.

2014-04-28  Joey Morin <joeymorin@gmail.com>

	Fix for bug #40003: Integer type promotion leads to inefficent code in wdt.h
	* include/avr/wdt.h (wdt_enable): cast expression to destination type

2014-04-16  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	Fix for bug #42084: wrong LFUSE_DEFAULT in iotn84a.h
	Submitted by ralphdoncaster
	* include/avr/iotn84a.h: Update LFUSE_DEFAULT as per datasheet.

2014-04-16  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	Fix for bug #42085: HFUSE_DEFAULT not defined for iotn84.h
	Submitted by ralphdoncaster
	* include/avr/iotn84.h: Rename FUSE_HFUSE_DEFAULT to HFUSE_DEFAULT.

2014-03-31  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	* configure.ac: Add AT90pwm161, ATA5272, ATA5505, ATA5790, ATA5795,
	ATA6285, ATA6286, ATmega1284, ATmega128A, ATmega164PA, ATmega165PA,
	ATmega168PA, ATmega3250PA, ATmega325PA, ATmega3290PA, ATmega32A,
	ATmega48PA, ATmega64A, ATmega8A, ATtiny1634, ATtiny828, ATxmega128A3U,
	ATxmega128A4U, ATxmega128B1, ATxmega128B3, ATxmega128C3, ATxmega128D4,
	ATxmega16A4U, ATxmega16C4, ATxmega192A3U, ATxmega192C3, ATxmega256A3BU,